2008-08-08  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * TODO:

    Update.

2008-08-07  Patrick Spendrin    <ps_ml@gmx.de>

    * src/plugins/marble/geodata/MarbleGeoDataPlugin.{h|cpp}
    * src/plugins/marble/geodata/Rabet.kml
    * src/lib/geodata/data/GeoDataLineStyle.cpp
    * src/lib/geodata/handlers/kml/KmlColorTagHandler.cpp

    fix opacity and line width
    Note: Look at the town where I live and try to find the street in which
    I live - even if I painted it in a strange colour.
    Note: The colours still don't match GE but maybe this is just an illusion
    
2008-08-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/plugins/marble/CMakeLists.txt
    * src/plugins/marble/geodata/CMakeLists.txt
    * src/plugins/marble/geodata/MarbleGeoDataPlugin.{h|cpp}
    * src/plugins/marble/geodata/czech.kml
    * src/plugins/marble/geodata/germany.kml
    * src/plugins/marble/geodata/poland.kml

    add MarbleGeoDataPlugin
    this plugin dumps the content of KML file to the screen
    (as far as possible)

2008-08-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/CMakeLists.txt
    * src/lib/GeoPainter.{h|cpp}
    * src/lib/MarbleDataFacade.{h|cpp}
    * src/lib/MarbleGeoDataModel.{h|cpp}

    adjust GeoPainter to make direct painting of QVectors possible
    expose a GeoDataDocument as geoDataRoot through the Facade
    add a new data model for the geodata api

2008-08-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataDocument.{h|cpp}
    * src/lib/geodata/data/GeoDataStyle.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlColorTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlHrefTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlIconStyleTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlLabelStyleTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlLineStyleTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlPolyStyleTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlStyleTagHandler.cpp