@@ -1,3 +1,9 @@
+2008-08-12  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/geodata/handlers/osm-namefinder/NamedTagHandler.cpp:
+
+    Remove commented out code.
+
 2008-08-08  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * TODO:
